--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/kpcyrd/sloppy-rfc4880"
 keywords = ["rfc4880", "pgp", "gpg", "gnupg", "openpgp"]
 categories = ["parser-implementations"]
 readme = "README.md"
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "kpcyrd/sloppy-rfc4880" }
@@ -18,6 +19,8 @@ log = "0.4"
 byteorder = "1.2"
 failure = "0.1"
 base64 = "0.10"
+serde = { version="1.0", features=["derive"] }
+hex = "0.3.2"
 
 [dev-dependencies]
 env_logger = "0.6"
