--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ failure = "0.1"
 base64 = "0.10"
 serde = { version="1.0", features=["derive"] }
 hex = "0.3.2"
+sha-1 = "0.8.1"
 
 [dev-dependencies]
 env_logger = "0.6"
