--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,12 @@ travis-ci = { repository = "kpcyrd/sloppy-rfc4880" }
 [dependencies]
 log = "0.4"
 byteorder = "1.2"
-failure = "0.1"
-base64 = "0.10"
+anyhow = "1.0"
+base64 = "0.13"
 serde = { version="1.0", features=["derive"] }
-hex = "0.3.2"
-sha-1 = "0.8.1"
+hex = "0.4"
+sha-1 = "0.9"
 
 [dev-dependencies]
-env_logger = "0.6"
-bytes = "0.4.10"
+env_logger = "0.8"
+bytes = "0.6"
